# CrackLite

./: .gitignore  CITATION.cff  LICENSE  MODEL_CARD.md  README.md  THIRD_PARTY_NOTICES.md  calc_complexity.py  config.py  dataload.py  evaluate.py  losses.py  model.py  predict.py  pyproject.toml  requirements.txt  train.py  utils.py
LICENSES/: README.md
assets/: README.md
checkpoints/: README.md  manifest.json
configs/: demo_cpu.json  paper_cracklite.json
demo_data/: README.md  manifest.csv
docs/: DATASET_PROTOCOL.md  MODEL_CARD.md  REPRODUCIBILITY.md
docs/results/: ablation_results_summary.csv  ablation_results_summary.md  experiment_results_summary.csv
scripts/: run_cracklite.ps1  run_cracklite.sh
tools/: __init__.py  complexity.py  evaluate.py  make_demo_dataset.py  predict.py  train.py
