[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cracklite"
version = "0.1.0"
description = "CrackLite: lightweight concrete crack segmentation with direction-guided topology aggregation and local geometry refinement"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Longsheng Bao"},
  {name = "Si Chen"},
  {name = "Yuyang Bao"},
  {name = "Baoxian Li"},
  {name = "Jiakang Zhao"},
  {name = "Ling Yu"}
]
dependencies = [
  "albumentations>=1.3",
  "matplotlib>=3.6",
  "numpy>=1.23",
  "opencv-python>=4.7",
  "pillow>=9.0",
  "torch>=1.13",
  "torchvision>=0.14",
  "tqdm>=4.64"
]

[project.optional-dependencies]
analysis = ["thop>=0.1.1"]
dev = ["pytest>=7.0"]

[project.scripts]
cracklite-make-demo = "tools.make_demo_dataset:main"
cracklite-train = "tools.train:main"
cracklite-evaluate = "tools.evaluate:main"
cracklite-predict = "tools.predict:main"
cracklite-complexity = "tools.complexity:main"

[tool.setuptools]
py-modules = [
  "calc_complexity",
  "config",
  "dataload",
  "evaluate",
  "losses",
  "model",
  "predict",
  "train",
  "utils"
]

[tool.setuptools.packages.find]
include = ["tools"]
